[package]
name = "sqlite-axum-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio", "json"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
anyhow = "1.0.95"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
dotenvy = "0.15.7"
chrono = "0.4.39"
strum = "0.27.0"
strum_macros = "0.27.0"
hyper = "1.6.0"
tower = "0.5.2"
http-body-util = "0.1.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"